--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                   <th class="col-metric">Metric</th>
                   <th>Last 3-Mth Avg</th>
                   <th>Current Month</th>
-                  <th>MoM Change</th>
+                  <th>Benchmark</th>
+                  <th>Variance</th>
                   <th>YTD Avg</th>
                 </tr>
               </thead>
