--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                   <th>Engaged</th>
                   <th>Completed</th>
                   <th>Completion %</th>
-                  <th>MoM</th>
+                  <th>Benchmark</th>
+                  <th>Variance</th>
                 </tr>
               </thead>
               <tbody id="programTbody"></tbody>
