--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Alante Performance Dashboard</title>
-  <link rel="stylesheet" href="Draft%201/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="page">
@@ -13,7 +13,7 @@
         <h1>Alante Performance Dashboard</h1>
         <div class="sub">Date of Report: <span id="reportDate">Dec 2025</span></div>
       </div>
-      <a class="btn" href="Draft%201/Alante%20Performance%20Data.xlsx" download>
+      <a class="btn" href="Alante Performance Data.xlsx" download>
         <span class="btn-icon">⬇</span>
         Export to Excel
       </a>
@@ -86,6 +86,6 @@
     </div>
   </div>
 
-  <script src="Draft%201/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
