--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Alante Performance Dashboard</title>
-  <link rel="stylesheet" href="Draft%202/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="page">
@@ -13,7 +13,7 @@
         <h1>Alante Performance Dashboard</h1>
         <div class="sub">Date of Report: <span id="reportDate">Dec 2025</span></div>
       </div>
-      <a class="btn" href="Draft%202/Alante%20Performance%20Data.xlsx" download>
+      <a class="btn" href="Alante Performance Data.xlsx" download>
         <span class="btn-icon">⬇</span>
         Export to Excel
       </a>
@@ -30,8 +30,7 @@
                   <th class="col-metric">Metric</th>
                   <th>Last 3-Mth Avg</th>
                   <th>Current Month</th>
-                  <th>Benchmark</th>
-                  <th>Variance</th>
+                  <th>MoM Change</th>
                   <th>YTD Avg</th>
                 </tr>
               </thead>
@@ -40,25 +39,7 @@
           </div>
         </section>
 
-        <section class="card">
-          <div class="card-title">Program Outcomes</div>
-          <div class="card-body">
-            <table class="table" id="programTable">
-              <thead>
-                <tr>
-                  <th>Program</th>
-                  <th>Eligible</th>
-                  <th>Engaged</th>
-                  <th>Completed</th>
-                  <th>Completion %</th>
-                  <th>Benchmark</th>
-                  <th>Variance</th>
-                </tr>
-              </thead>
-              <tbody id="programTbody"></tbody>
-            </table>
-          </div>
-        </section>
+        
       </main>
 
       <aside class="right">
@@ -88,6 +69,6 @@
     </div>
   </div>
 
-  <script src="Draft%202/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
